obeys user options.  debug functionality.  web service user id generation.  localStorage for everything.  cleaner templates.

--- a/chrome-bootstrap.css
+++ b/chrome-bootstrap.css
@@ -4,6 +4,13 @@ label
   cursor: pointer;
 }
 
+small
+{
+  color: #999;
+}
+
+/************************** HAX *****************************/
+
 body {
   font-family: 'Chrome Droid Sans', 'Droid Sans Fallback', 'Lucida Grande', sans-serif;
   font-size: 75%;
